Fix card visibility when not in front of card-stack + Refactor some code

--- a/fog_web/src/main/webapp/assets/css/admin_footer.css
+++ b/fog_web/src/main/webapp/assets/css/admin_footer.css
@@ -4,7 +4,6 @@
 @import url("base.css");
 
 footer{
-    z-index: 100;
     width: 100%;
     max-width: 1500px;
     margin: 0 auto;
